fix preview channels not being visible under large textures (fixes #553)

--- a/src/app.css
+++ b/src/app.css
@@ -2164,13 +2164,16 @@ input[type=number]::-webkit-outer-spin-button {
 #legacy-tab-textures .preview-container {
 	position: relative;
 }
+
 #tab-textures .preview-container .preview-channels,
 #legacy-tab-textures .preview-container .preview-channels {
 	position: absolute;
 	bottom: 35px;
 	left: 0;
 	list-style: none;
+	z-index: 2;
 }
+
 #tab-textures .preview-container .preview-channels li,
 #legacy-tab-textures .preview-container .preview-channels li {
 	width: 20px;
